syntax = "proto3";

package audit;

option go_package = "audit/generated";

service Audit {
  rpc LogOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  oneof result {
    int32 id = 1;
    string error = 2;
  }
}

message Order {
  int32 id = 1;
  repeated OrderProduct products = 2;
  int32 user_id = 3;
}

message OrderProduct {
  int32 product_id = 1;
  int32 quantity = 2;
}